<resources>
    <string name="ok">OK</string>
    <string name="search">Search</string>
    <string name="walk">Walk</string>
    <string name="step_walk_to">Walk to next step</string>
    <string name="get_directions">Get directions</string>
    <string name="powered_by">POWERED BY</string>
    <string name="find_starting_point">Find starting point</string>
    <string name="find_destination">Find destination</string>
    <string name="search_for_locations_inside_sofi">Search for locations inside SOFI</string>
    <string name="no_results">No results</string>
    <string name="reverse">reverse</string>
    <string name="accessibility">Accessibility</string>
    <string name="start">Start</string>
    <string name="no_route">No route</string>
    <string name="no_route_message">No route could be made between the selected starting point and destination.\nPlease change the selected locations.</string>
</resources>