<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="com.mapspeople.sportseventactivity.RoutingFragment"
    android:layout_width="match_parent"
    android:animateLayoutChanges="true"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:clickable="true"
        android:orientation="vertical"
        android:focusable="true">
        <ImageView
            android:layout_margin="5dp"
            android:layout_width="25dp"
            android:layout_height="5dp"
            android:src="@drawable/card_pull_shape"
            android:alpha="0.3"
            android:layout_gravity="center"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp">
            <TextView
                android:id="@+id/directionsTxtView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/close_btn"
                android:textSize="25dp"
                android:text="@string/get_directions"/>
            <ImageView
                android:id="@+id/close_btn"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_baseline_arrow_back_24"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.2"
            android:background="?attr/colorControlNormal"/>
        <LinearLayout
            android:id="@+id/fromLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fromSearchTextField"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:prefixText="From:"
                app:endIconDrawable="@drawable/ic_baseline_clear_24"
                app:endIconMode="clear_text"
                app:hintEnabled="false"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fromSearchEditText"
                    android:layout_width="match_parent"
                    android:imeOptions="actionSearch"
                    android:inputType="textVisiblePassword"
                    android:hint="@string/find_starting_point"
                    android:maxLines="1"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/toLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/toSearchTextField"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:prefixText="To:"
                app:endIconDrawable="@drawable/ic_baseline_clear_24"
                app:endIconMode="clear_text"
                app:hintEnabled="false"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/toSearchEditText"
                    android:layout_width="match_parent"
                    android:imeOptions="actionSearch"
                    android:inputType="textVisiblePassword"
                    android:maxLines="1"
                    android:hint="@string/find_destination"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress_indicator"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
        <LinearLayout
            android:id="@+id/list_separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:visibility="gone"
            android:orientation="vertical"
            android:alpha="0.2"
            android:background="?attr/colorControlNormal"/>
        <TextView
            android:id="@+id/searchHintText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/search_for_locations"
            android:textSize="20dp"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/searchNoResultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_results"
            android:textSize="20dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textStyle="bold"
            android:visibility="gone"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:visibility="gone"
            android:scrollbars="vertical"
            app:layoutManager="LinearLayoutManager"
            tools:context=".RoutingFragment"
            tools:listitem="@layout/fragment_search_item" />
        <RelativeLayout
            android:id="@+id/bigView"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="600dp"/>
        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/reverseBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reverse"
                    app:icon="@drawable/ic_baseline_sync_alt_24"
                    android:layout_marginStart="5dp"
                    android:textSize="12dp"
                    style="@style/Widget.MaterialComponents.Button.TextButton" />
                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/accessibility_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/accessibility"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/directionsStartButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/start"
                android:textSize="20dp"
                android:padding="15dp"
                android:textAllCaps="false"
                android:visibility="visible"
                android:enabled="false"
                app:cornerRadius="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>